# my-shop

./: .gitignore  browse_with_cdp.py  build_presentation.py  build_presentation_v2.py  capture_rozetka.py  check_caption_pages.py  check_indent.py  check_pagenum.py  clean_orphans.py  compare_reports.py  create_clean_template.py  create_report_kramar.py  create_report_v6.py  create_report_v7.py  create_report_v8.py  docker-compose.yml  dump_techbox_body.py  dump_v9.py  fill_template.py  fill_template2.py  fill_template3.py  fill_template4.py  fill_template5.py  fill_template_final.py  find_breaks.py  fix_teacher_feedback.py  fix_toc.py  improve_techbox.py  inspect_list2.py  inspect_list_xml.py  inspect_spacing.py  inspect_struct.py  inspect_templates.py  inspect_v9copy.py  keep_together.py  kramar_pages.py  kramar_pdf.py  merge_templates.py  merge_v2.py  merge_v3.py  (+17 more)
admin/: index.html  package-lock.json  package.json  vite.config.ts
api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  init_db.py  pyproject.toml  seed.py
api/alembic/: env.py
api/alembic/versions/: 3029959f58f5_user_id_set_null_on_delete.py  3184d61677fb_baseline.py  353477288a44_add_ai_specs_to_products.py  3dbefb22beeb_add_promo_code_id_fk_to_orders.py
api/app/: auth.py  config.py  database.py  deps.py  email.py  main.py  models.py  schemas.py
api/app/routers/: ai.py  analytics.py  auth.py  liqpay.py  orders.py  products.py  promocodes.py  reviews.py  settings.py  users.py
api/app/templates/: verify_email.html
client/: index.html  package-lock.json  package.json  vite.config.ts
(+98 files in other folders)
